--- a/wwwroot/styles/layouts.less
+++ b/wwwroot/styles/layouts.less
@@ -29,7 +29,7 @@ p {
 }
 
 .hero-image__container {
-    background-image: linear-gradient(@standardMainPaletteTransparent, @standardMainPaletteTransparent), url("../images/heroImage2.png");
+    background-image: linear-gradient(@standardMainPaletteTransparent, @standardMainPaletteTransparent), url("../images/heroImage.jpg");
     height: 33%;
     min-height: 300px;
     background-position: right;
