--- a/wwwroot/styles/_variables.less
+++ b/wwwroot/styles/_variables.less
@@ -9,3 +9,8 @@
 @standardLightPalette: #D4D4D4;
 
 @standardMainPaletteTransparent: rgba(92, 106, 128, 0.5);
+
+@mediumFont: 1.5em;
+@mediumFontMobile: 1em;
+@largeFont: 2.5em;
+@largeFontMobile: 2em;
