--- a/wwwroot/styles/_mixins.less
+++ b/wwwroot/styles/_mixins.less
@@ -23,7 +23,7 @@
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 
     &:hover {
-        .box-shadow();
+        cursor:pointer;
         -webkit-transform: translate(0, -5px);
         transform: translate(0, -5px);
         -webkit-transition-delay: 0s !important;
