--- a/wwwroot/styles/_layout.less
+++ b/wwwroot/styles/_layout.less
@@ -137,6 +137,11 @@ p {
     padding-right: @doubleStandardSpace;
 }
 
+.github-repo__item-img {
+    background-color: @standardLightPalette;
+    padding: @doubleStandardSpace;
+}
+
 footer {
     background-color: @standardMainPalette;
     color: white;
